generated2/MiLenguajeParser.py
# Generated from Grammar/MiLenguaje.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiLenguajeParser ( Parser ):

    grammarFileName = "MiLenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inicio'", "'fin'", "'entero'", "'decimal'", 
                     "'cadena'", "'booleano'", "'si'", "'sino'", "'mientras'", 
                     "'leer'", "'escribir'", "'funcion'", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'='", "'('", "')'", "'{'", 
                     "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "INICIO", "FIN", "ENTERO", "DECIMAL", 
                      "CADENA", "BOOLEANO", "SI", "SINO", "MIENTRAS", "LEER", 
                      "ESCRIBIR", "FUNCION", "BOOLEAN_LITERAL", "SUMA", 
                      "RESTA", "MULT", "DIV", "MOD", "IGUAL", "DISTINTO", 
                      "MAYOR", "MENOR", "MAYOR_IGUAL", "MENOR_IGUAL", "ASIGNACION", 
                      "PAR_IZQ", "PAR_DER", "LLAVE_IZQ", "LLAVE_DER", "PUNTO_COMA", 
                      "COMA", "ID", "NUMERO", "CADENA_LITERAL", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_declaraciones = 1
    RULE_declaracion = 2
    RULE_tipo = 3
    RULE_cuerpo = 4
    RULE_instruccion = 5
    RULE_asignacion = 6
    RULE_expresion = 7
    RULE_expresion_prima = 8
    RULE_termino = 9
    RULE_termino_prima = 10
    RULE_factor = 11
    RULE_condicional = 12
    RULE_sino = 13
    RULE_condicion = 14
    RULE_op_relacional = 15
    RULE_bucle = 16
    RULE_entrada_salida = 17
    RULE_definicion_funcion = 18
    RULE_parametros = 19
    RULE_lista_parametros = 20
    RULE_lista_parametros_prima = 21
    RULE_llamada_funcion = 22
    RULE_argumentos = 23
    RULE_lista_argumentos = 24
    RULE_lista_argumentos_prima = 25

    ruleNames =  [ "programa", "declaraciones", "declaracion", "tipo", "cuerpo", 
                   "instruccion", "asignacion", "expresion", "expresion_prima", 
                   "termino", "termino_prima", "factor", "condicional", 
                   "sino", "condicion", "op_relacional", "bucle", "entrada_salida", 
                   "definicion_funcion", "parametros", "lista_parametros", 
                   "lista_parametros_prima", "llamada_funcion", "argumentos", 
                   "lista_argumentos", "lista_argumentos_prima" ]

    EOF = Token.EOF
    INICIO=1
    FIN=2
    ENTERO=3
    DECIMAL=4
    CADENA=5
    BOOLEANO=6
    SI=7
    SINO=8
    MIENTRAS=9
    LEER=10
    ESCRIBIR=11
    FUNCION=12
    BOOLEAN_LITERAL=13
    SUMA=14
    RESTA=15
    MULT=16
    DIV=17
    MOD=18
    IGUAL=19
    DISTINTO=20
    MAYOR=21
    MENOR=22
    MAYOR_IGUAL=23
    MENOR_IGUAL=24
    ASIGNACION=25
    PAR_IZQ=26
    PAR_DER=27
    LLAVE_IZQ=28
    LLAVE_DER=29
    PUNTO_COMA=30
    COMA=31
    ID=32
    NUMERO=33
    CADENA_LITERAL=34
    WS=35
    COMMENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INICIO(self):
            return self.getToken(MiLenguajeParser.INICIO, 0)

        def declaraciones(self):
            return self.getTypedRuleContext(MiLenguajeParser.DeclaracionesContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(MiLenguajeParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(MiLenguajeParser.FIN, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = MiLenguajeParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(MiLenguajeParser.INICIO)
            self.state = 53
            self.declaraciones()
            self.state = 54
            self.cuerpo()
            self.state = 55
            self.match(MiLenguajeParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(MiLenguajeParser.DeclaracionContext,0)


        def declaraciones(self):
            return self.getTypedRuleContext(MiLenguajeParser.DeclaracionesContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_declaraciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraciones" ):
                listener.enterDeclaraciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraciones" ):
                listener.exitDeclaraciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaraciones" ):
                return visitor.visitDeclaraciones(self)
            else:
                return visitor.visitChildren(self)




    def declaraciones(self):

        localctx = MiLenguajeParser.DeclaracionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaraciones)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.declaracion()
                self.state = 58
                self.declaraciones()
                pass
            elif token in [2, 7, 9, 10, 11, 12, 32]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(MiLenguajeParser.TipoContext,0)


        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def PUNTO_COMA(self):
            return self.getToken(MiLenguajeParser.PUNTO_COMA, 0)

        def ASIGNACION(self):
            return self.getToken(MiLenguajeParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = MiLenguajeParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.tipo()
            self.state = 64
            self.match(MiLenguajeParser.ID)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 65
                self.match(MiLenguajeParser.ASIGNACION)
                self.state = 66
                self.expresion()


            self.state = 69
            self.match(MiLenguajeParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(MiLenguajeParser.ENTERO, 0)

        def DECIMAL(self):
            return self.getToken(MiLenguajeParser.DECIMAL, 0)

        def CADENA(self):
            return self.getToken(MiLenguajeParser.CADENA, 0)

        def BOOLEANO(self):
            return self.getToken(MiLenguajeParser.BOOLEANO, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = MiLenguajeParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(MiLenguajeParser.InstruccionContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(MiLenguajeParser.CuerpoContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCuerpo" ):
                return visitor.visitCuerpo(self)
            else:
                return visitor.visitChildren(self)




    def cuerpo(self):

        localctx = MiLenguajeParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cuerpo)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 9, 10, 11, 12, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.instruccion()
                self.state = 74
                self.cuerpo()
                pass
            elif token in [2, 29]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(MiLenguajeParser.AsignacionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(MiLenguajeParser.CondicionalContext,0)


        def bucle(self):
            return self.getTypedRuleContext(MiLenguajeParser.BucleContext,0)


        def entrada_salida(self):
            return self.getTypedRuleContext(MiLenguajeParser.Entrada_salidaContext,0)


        def llamada_funcion(self):
            return self.getTypedRuleContext(MiLenguajeParser.Llamada_funcionContext,0)


        def definicion_funcion(self):
            return self.getTypedRuleContext(MiLenguajeParser.Definicion_funcionContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = MiLenguajeParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instruccion)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.condicional()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.bucle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.entrada_salida()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.llamada_funcion()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.definicion_funcion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def ASIGNACION(self):
            return self.getToken(MiLenguajeParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,0)


        def PUNTO_COMA(self):
            return self.getToken(MiLenguajeParser.PUNTO_COMA, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = MiLenguajeParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MiLenguajeParser.ID)
            self.state = 88
            self.match(MiLenguajeParser.ASIGNACION)
            self.state = 89
            self.expresion()
            self.state = 90
            self.match(MiLenguajeParser.PUNTO_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(MiLenguajeParser.TerminoContext,0)


        def expresion_prima(self):
            return self.getTypedRuleContext(MiLenguajeParser.Expresion_primaContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion" ):
                return visitor.visitExpresion(self)
            else:
                return visitor.visitChildren(self)




    def expresion(self):

        localctx = MiLenguajeParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.termino()
            self.state = 93
            self.expresion_prima()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expresion_primaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self):
            return self.getTypedRuleContext(MiLenguajeParser.TerminoContext,0)


        def expresion_prima(self):
            return self.getTypedRuleContext(MiLenguajeParser.Expresion_primaContext,0)


        def SUMA(self):
            return self.getToken(MiLenguajeParser.SUMA, 0)

        def RESTA(self):
            return self.getToken(MiLenguajeParser.RESTA, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_expresion_prima

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion_prima" ):
                listener.enterExpresion_prima(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion_prima" ):
                listener.exitExpresion_prima(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion_prima" ):
                return visitor.visitExpresion_prima(self)
            else:
                return visitor.visitChildren(self)




    def expresion_prima(self):

        localctx = MiLenguajeParser.Expresion_primaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expresion_prima)
        self._la = 0 # Token type
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                _la = self._input.LA(1)
                if not(_la==14 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 96
                self.termino()
                self.state = 97
                self.expresion_prima()
                pass
            elif token in [19, 20, 21, 22, 23, 24, 27, 30, 31]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(MiLenguajeParser.FactorContext,0)


        def termino_prima(self):
            return self.getTypedRuleContext(MiLenguajeParser.Termino_primaContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermino" ):
                return visitor.visitTermino(self)
            else:
                return visitor.visitChildren(self)




    def termino(self):

        localctx = MiLenguajeParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_termino)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.factor()
            self.state = 103
            self.termino_prima()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Termino_primaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(MiLenguajeParser.FactorContext,0)


        def termino_prima(self):
            return self.getTypedRuleContext(MiLenguajeParser.Termino_primaContext,0)


        def MULT(self):
            return self.getToken(MiLenguajeParser.MULT, 0)

        def DIV(self):
            return self.getToken(MiLenguajeParser.DIV, 0)

        def MOD(self):
            return self.getToken(MiLenguajeParser.MOD, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_termino_prima

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino_prima" ):
                listener.enterTermino_prima(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino_prima" ):
                listener.exitTermino_prima(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermino_prima" ):
                return visitor.visitTermino_prima(self)
            else:
                return visitor.visitChildren(self)




    def termino_prima(self):

        localctx = MiLenguajeParser.Termino_primaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_termino_prima)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 458752) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 106
                self.factor()
                self.state = 107
                self.termino_prima()
                pass
            elif token in [14, 15, 19, 20, 21, 22, 23, 24, 27, 30, 31]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAR_IZQ(self):
            return self.getToken(MiLenguajeParser.PAR_IZQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(MiLenguajeParser.ExpresionContext,0)


        def PAR_DER(self):
            return self.getToken(MiLenguajeParser.PAR_DER, 0)

        def ID(self):
            return self.getToken(MiLenguajeParser.ID, 0)

        def NUMERO(self):
            return self.getToken(MiLenguajeParser.NUMERO, 0)

        def CADENA_LITERAL(self):
            return self.getToken(MiLenguajeParser.CADENA_LITERAL, 0)

        def BOOLEAN_LITERAL(self):
            return self.getToken(MiLenguajeParser.BOOLEAN_LITERAL, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = MiLenguajeParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_factor)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(MiLenguajeParser.PAR_IZQ)
                self.state = 113
                self.expresion()
                self.state = 114
                self.match(MiLenguajeParser.PAR_DER)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(MiLenguajeParser.ID)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(MiLenguajeParser.NUMERO)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(MiLenguajeParser.CADENA_LITERAL)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.match(MiLenguajeParser.BOOLEAN_LITERAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(MiLenguajeParser.SI, 0)

        def PAR_IZQ(self):
            return self.getToken(MiLenguajeParser.PAR_IZQ, 0)

        def condicion(self):
            return self.getTypedRuleContext(MiLenguajeParser.CondicionContext,0)


        def PAR_DER(self):
            return self.getToken(MiLenguajeParser.PAR_DER, 0)

        def LLAVE_IZQ(self):
            return self.getToken(MiLenguajeParser.LLAVE_IZQ, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(MiLenguajeParser.CuerpoContext,0)


        def LLAVE_DER(self):
            return self.getToken(MiLenguajeParser.LLAVE_DER, 0)

        def sino(self):
            return self.getTypedRuleContext(MiLenguajeParser.SinoContext,0)


        def getRuleIndex(self):
            return MiLenguajeParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = MiLenguajeParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condicional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(MiLenguajeParser.SI)
            self.state = 123
            self.match(MiLenguajeParser.PAR_IZQ)
            self.state = 124
            self.condicion()
            self.state = 125
            self.match(MiLenguajeParser.PAR_DER)
            self.state = 126
            self.match(MiLenguajeParser.LLAVE_IZQ)
            self.state = 127
            self.cuerpo()
            self.state = 128
            self.match(MiLenguajeParser.LLAVE_DER)
            self.state = 129
            self.sino()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SinoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINO(self):
            return self.getToken(MiLenguajeParser.SINO, 0)

        def LLAVE_IZQ(self):
            return self.getToken(MiLenguajeParser.LLAVE_IZQ, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(MiLenguajeParser.CuerpoContext,0)


        def LLAVE_DER(self):
            return self.getToken(MiLenguajeParser.LLAVE_DER, 0)

        def getRuleIndex(self):
            return MiLenguajeParser.RULE_sino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSino" ):
                listener.enterSino(self)
